<resources>
    <string name="app_name">Finance Trust Bank</string>
    <string name="splash_screen_description" translatable="false">Splash Screen Description</string>
    <string name="login_description">Login Description</string>
    <string name="splash_screen" translatable="false">Splash Screen</string>
    <string name="advertisement_display_time">Test</string>
    <string name="test">Test</string>
    <string name="long_test">Long test description text should go here. This is just some dummy data</string>
    <string name="skip">skip</string>
    <string name="mobile_no">Enter Mobile Number</string>
    <string name="pin">PIN</string>
    <string name="forgot_pin"><u>Forgot PIN?</u></string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="terms_and_conditions">By using this app, you agree to the Terms and Conditions</string>
    <string name="title_activity_main_menu" translatable="false">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_wallet">Wallet</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="log_out">Log out</string>
    <string name="churchill" translatable="false">Churchill</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="my_wallet">My Wallet</string>
    <string name="talent_search">Talent Search</string>
    <string name="social_media">Social Media</string>
    <string name="churchill_foundation" translatable="false">Sidian Bank </string>
    <string name="advertise">Advertise</string>
    <string name="bill_manager">Bill Manager</string>
    <string name="help">Help</string>
    <string name="packages">Packages</string>
    <string name="home_ads">Home Ads</string>
    <string name="churchill_unlimited" translatable="false">Sidian Bank </string>
    <string name="back">Back</string>
    <string name="notification">Notification</string>
    <string name="my_notifications">My Notifications</string>
    <string name="notification_count" translatable="false">2</string>
    <string name="churchill_shows" translatable="false">Churchill Shows</string>
    <string name="food_and_drinks">Food &amp; Drinks</string>
    <string name="travel">Travel</string>
    <string name="shows_and_events" translatable="false">Shows &amp; Events</string>
    <string name="others">Others</string>
    <string name="exclusives">Exclusives</string>
    <string name="churchill_n_shows" translatable="false">Churchill \nShows</string>
    <string name="live_stream">Live  Stream</string>
    <string name="churchill_team" translatable="false">Sidian Bank  \nTeam</string>
    <string name="my_name">My Name</string>
    <string name="churchill_events" translatable="false">Sidian Bank  \nEvents</string>
    <string name="other_events">Other  Events</string>
    <string name="my_tickets">My Tickets</string>
    <string name="send_money">Send \nMoney</string>
    <string name="booking">Booking</string>
    <string name="investments">Investments</string>
    <string name="coming_soon" translatable="false">Coming Soon</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="kenya" translatable="false">Kenya</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_recipient_name">Enter Recipient Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_all_field_wallet">Enter Required data</string>
    <string name="source_of_funds">Source of funds</string>
    <string name="churchill_wallet" translatable="false">boa   \nWallet</string>
    <string name="credit_card">Credit  Card</string>
    <string name="proceed">proceed</string>
    <string name="setting_things">Preparing to launch ✈</string>
    <string name="_0_00_KES" translatable="false">0.00  UGX</string>
    <string name="dashboard">Dashboard</string>
    <string name="error_response">Service unavailable, try again later</string>
    <string name="load_money">Load Money</string>
    <string name="funds_transfer">Funds Transfer</string>
    <string name="bills">Bills</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="beneficiary_list">Beneficiary List</string>
    <string name="statements">Statements</string>
    <string name="merchant">Merchant</string>
    <string name="merchant_payment">Merchant\nPayment</string>
    <string name="link_card">Link card</string>
    <string name="add_card">Add card</string>
    <string name="my_cards">My cards</string>
    <string name="select_category" translatable="false"><u>Select Category</u></string>
    <string name="select_category_title">Select Category</string>
    <string name="select_banner_size" translatable="false"><u>Select Banner Size</u></string>
    <string name="website">Website (Optional)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit">Submit</string>
    <string name="disclaimer">Please note that the required advertisement banner size should atleast
    be 1020px (width) by 450px (height)</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="please_select_source">Please select source</string>
    <string name="from_churchill_wallet">From Wallet</string>
    <string name="other_churchill_wallet">Other Wallet</string>
    <string name="my_phone">My Phone</string>
    <string name="other_phone">Other Phone</string>
    <string name="other_mobile_money">From Mobile</string>
    <string name="other_credit_card">Credit Card</string>
    <string name="from_card">From Card</string>
    <string name="from_mpesa">From Mpesa</string>
    <string name="send_to">Send to</string>
    <string name="inquiries_list">inquiries list</string>
    <string name="inquiries">Inquiries</string>
    <string name="enter_merchant_id">Enter Merchant ID</string>
    <string name="lookup">lookup</string>
    <string name="please_link_your_card">please link your card</string>
    <string name="select_card">Select Card</string>
    <string name="card_number">Card Number</string>
    <string name="select_currency">Select Currency</string>
    <string name="expiry_month">Exp. Month</string>
    <string name="expiry_year">Exp. Year</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="use_biometrics">Use Biometrics to login</string>
    <string name="swipe_instruction_fingerprint">(Hello ***, use your fingerprint to log in \nor \nSwipe HERE to the left to use the keyboard )</string>
    <string name="swipe_instruction_keyboard">(Enter your secure PIN \nor \nSwipe HERE to the right to use your fingerprint )</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="question_category_one"><u>QUESTION CATEGORY I</u></string>
    <string name="question_category_two"><u>QUESTION CATEGORY II</u></string>
    <string name="topic_one">Topic One</string>
    <string name="topic_two">Topic Two</string>
    <string name="topic_three">Topic Three</string>
    <string name="topic_four">Topic Four</string>
    <string name="change_pin"><u>Change PIN</u></string>
    <string name="test_email">myemailaddress@gmail.com</string>
    <string name="churchill_email_address" translatable="false"><u>info@standardbank.co.mw</u></string>
    <string name="telephone">Telephone</string>
    <string name="test_phone_no"><u>0712345678</u></string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="no_notifications">There are no notifications to display</string>
    <string name="frequently_accessed_bills">(My frequently accessed bills)</string>
    <string name="_1" translatable="false">1</string>
    <string name="_1eg">Eg. 1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="id_number">ID Number</string>
    <string name="d_o_b">Date of birth</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_security_question">Select a security question</string>
    <string name="enter_answer">Enter answer</string>
    <string name="change_email_address"><u>Change Email Address</u></string>
    <string name="pay_tv">Pay Tv</string>
    <string name="nhif">Insurance</string>
    <string name="pay_nhif">Pay Insurance</string>
    <string name="county_payments">Government \nPayments</string>
    <string name="county_payments_title">Government Payments</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="select_mobile_network">Select Mobile Network</string>
    <string name="to_self">To self</string>
    <string name="to_other">To Other</string>
    <string name="purchase">Purchase</string>
    <string name="pay">Pay …</string>
    <string name="select_postpaid_package">Select postpaid package</string>
    <string name="buy_tokens">Buy Tokens</string>
    <string name="enter_meter_number">Enter Meter Number</string>
    <string name="select_county">Select County</string>
    <string name="select_service">Select Service</string>
    <string name="membership_number">Policy number</string>
    <string name="penalty">Penalty</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="smart_card_number">Smart card number</string>
    <string name="change">Change</string>
    <string name="current_pin">Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="kes_0_0_0">Kes 1,000.00</string>
    <string name="select_account_wallet">Select Account</string>
    <string name="btn_continue_text">CONTINUE</string>
    <string name="price_hint">Eg. Kes 1,000</string>
    <string name="select_account_top_hint">Select Account</string>
    <string name="current_account_hint">Current Account- A/C #1234******6789</string>
    <string name="amount_top_hint">Amount</string>
    <string name="select_service_provider_top_hint">Select Service Provider</string>
    <string name="phone_number_top_hint">Phone Number</string>
    <string name="phone_hint">Eg. +254712345678</string>
    <string name="withdraw_tv_title">We hope it’s not an emergency, fill in the details to withdraw your target savings</string>
    <string name="withdraw_amount_hint">Withdraw Amount</string>
    <string name="deposit_to_wallet">Deposit to</string>
    <string name="how_much_withraw_title">How much would you like to withdraw?</string>
    <string name="withdraw_to">Withdraw to</string>
    <string name="mpesa">Mpesa</string>
    <string name="withdraw_from">Withdraw from</string>
    <string name="enter_amount_hint">Enter Amount</string>
    <string name="phone_number_hint">Eg. 0712345678</string>
    <string name="phone_number_wallet">Phone Number</string>
    <string name="current_account_a_c_1234_6789">Current Account- A/C #1234******6789</string>
    <string name="amount_wallet">Amount</string>
    <string name="mpesa_wallet">Mpesa</string>
    <string name="eg_0712345678_wallet">Eg. 0712345678</string>
    <string name="how_much_would_you_like_to_withdraw">How much would you like to withdraw?</string>
</resources>