<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".ui.withdraw.w2.WithdrawFragmentWallet">

    <include
        android:id="@+id/clToolBar"
        layout="@layout/custom_toolbar_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvAccountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/margin_end"
        android:fontFamily="@font/nunitosans_semibold_wallet"
        android:text="@string/how_much_withraw_title"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolBar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAmount"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/amount_top_hint"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountNumber">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/price_hint"
            android:inputType="number"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSelectAccount"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/select_account_top_hint"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWithdrawalTo"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSelectAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/mpesa"
            android:inputType="text"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhone"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:layout_marginEnd="20dp"
        android:hint="@string/phone_number_top_hint"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputSelectAccount">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textViewWithdrawalTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:fontFamily="@font/nunitosans_regular_wallet"
        android:text="@string/withdraw_to"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputAmount" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/btn_rounded_corners_filled_wallet"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/nunitosans_extrabold_wallet"
        android:text="@string/btn_continue_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>