<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.withdraw.CardlessWithdrawalFragmentWallet">

    <include
        android:id="@+id/clToolBar"
        layout="@layout/custom_toolbar_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAmount"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:hint="@string/amount_wallet"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolBar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/enter_amount_hint"
            android:inputType="number"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhone"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:hint="@string/phone_number_top_hint"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputAmount">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/phone_number_hint"
            android:inputType="number"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSelectAccount"
        style="@style/exposedDropdownMenuCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:hint="@string/select_service_provider_top_hint"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWithdrawalFrom">

        <AutoCompleteTextView
            android:id="@+id/actSelectAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/current_account_a_c_1234_6789"
            android:inputType="none"
            android:minHeight="@dimen/_48dp"
            android:padding="15dp"
            android:textSize="@dimen/_14sp_text_size" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textViewWithdrawalFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:fontFamily="@font/nunitosans_regular_wallet"
        android:text="@string/withdraw_from"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputPhone" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/btn_rounded_corners_filled_wallet"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/nunitosans_extrabold_wallet"
        android:text="@string/btn_continue_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>