<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.myaccount.WithdrawMyAccountWalletFragment">

    <include
        android:id="@+id/clToolBar"
        layout="@layout/custom_toolbar_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHow_much_would_you_like_to_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:fontFamily="@font/nunitosans_regular_wallet"
        android:text="@string/how_much_would_you_like_to_withdraw"
        android:textAlignment="textStart"
        android:textColor="@color/dark_blue_wallet"
        android:textSize="@dimen/_14sp_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolBar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tILayoutAmount"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:hint="@string/amount_wallet"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHow_much_would_you_like_to_withdraw">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/kes_0_0_0"
            android:inputType="number"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvWithdrawTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:fontFamily="@font/nunitosans_regular_wallet"
        android:text="@string/withdraw_to"
        android:textAlignment="textStart"
        android:textColor="@color/dark_blue_wallet"
        android:textSize="@dimen/_14sp_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tILayoutAmount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tIlSelectAccount"
        style="@style/exposedDropdownMenuCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_32dp"
        app:hintTextColor="@color/black_wallet"
        android:hint="@string/select_account_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWithdrawTo">

        <AutoCompleteTextView
            android:id="@+id/actSelectAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/mpesa_wallet"
            android:inputType="none"
            android:minHeight="@dimen/_48dp"
            android:textSize="@dimen/_14sp_text_size" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tILayoutPhoneNumber"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:hint="@string/phone_number_wallet"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tIlSelectAccount">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/eg_0712345678_wallet"
            android:inputType="number"
            android:padding="15dp"
            android:drawableTint="@color/dark_blue_wallet"
            android:drawableEnd="@drawable/ic_outline_contacts_24"
            android:singleLine="true"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/btn_rounded_corners_filled_wallet"
        android:fontFamily="@font/nunitosans_extrabold_wallet"
        android:text="@string/btn_continue_text"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>