<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.withdraw.w2.Withdraw6FragmentWallet">

    <include
        android:id="@+id/clToolBar"
        layout="@layout/custom_toolbar_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tvAccountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:text="@string/withdraw_tv_title"
        android:layout_marginEnd="@dimen/margin_end"
        app:layout_constraintTop_toBottomOf="@id/clToolBar"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/nunitosans_semibold_wallet"
        android:textColor="@color/dark_blue"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountNumber"
        android:layout_marginTop="@dimen/margin_16_dp"
        style="@style/TextInputLayoutStyle"
        android:textColorHint="#000000"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/withdraw_amount_hint"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/price_hint"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="15sp"
            /></com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSelectAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWithdrawalTo"
        android:layout_marginTop="@dimen/margin_16_dp"
        style="@style/TextInputLayoutStyle"
        android:textColorHint="#000000"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/select_account_top_hint"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSelectAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:fontFamily="@font/nunitosans_regular_wallet"
            android:hint="@string/current_account_hint"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="15sp"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textViewWithdrawalTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:text="@string/deposit_to_wallet"
        android:fontFamily="@font/nunitosans_regular_wallet"
        android:textColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/textInputAmount"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_corners_filled_wallet"
        android:backgroundTint="@color/light_blue"
        android:text="@string/btn_continue_text"
        android:textColor="@color/white"
        android:fontFamily="@font/nunitosans_extrabold_wallet"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>